--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" dir="ltr">
   <head>
-    <title>Digital Identity Blockchain ERC-725</title>
+    <title>Driver's License Verification</title>
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
     <meta charset="UTF-8">
     <meta http-equiv="Content-Language" content="en">
