close to working

--- a/issuer-services/public/index.html
+++ b/issuer-services/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
     <meta charset="UTF-8">
     <meta http-equiv="Content-Language" content="en">
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="433-4338584_michigan-driver-license-template-michigan-enhanced-drivers-license.ico" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/app.css" />
